# python

./: README.md
IO/: test.py  test2.py  write.py
Matplotlib/: ChineseText.ipynb  QuickStart.ipynb  README.md
Milvus/: README.md  hello_milvus.ipynb
Module/: from.py  hello.py  my_module.py  test.py  test_hello.py
OOP/: Student.py  Student2.py  animals.py
Others/: hello_milvus.py  hello_redis_stack.py  practice.ipynb  test.py
Pandas/: Series.ipynb  Series.py
PythonCrashCourse/: 04_list_and_tuple.py  05_if_statement.py  7.1_input.py  7.2_while.py  8.5_function.py  9.1_dog.py  hello_world.py  stock.py
Test/: MyTest.py
recommender_system/: README.md  pyproject.toml
recommender_system/src/recommender_system/: __init__.py  test.ipynb  test.py
recommender_system/src/recommender_system/dataset/: movies_metadata.csv
